[package]
name = "lts_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lqos_config = { path = "../../lqos_config" }
lqos_utils = { path = "../../lqos_utils" }
uisp = { path = "../../uisp" }
dryoc = { version = "0.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = [ "rt", "macros", "net", "io-util", "time" ] }
serde_cbor = "0" # For RFC8949/7409 format C binary objects
log = "0"
bincode = "1"
once_cell = "1"
sysinfo = "0"
num-traits = "0.2"
miniz_oxide = "0.7.1"
dashmap = "5.4"