[package]
name = "lts_ingestor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pgdb = { path = "../pgdb" }
lts_client = { path = "../lts_client" }
lqos_config = { path = "../../lqos_config" }
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
influxdb2 = "0"
influxdb2-structmap = "0"
futures = "0"
once_cell = "1"
miniz_oxide = "0.7.1"
